--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_7631ec" >#7631ec</color>
+    <color name="color_2a003d" >#2A003D</color>
 </resources>
